[gd_scene load_steps=9 format=3 uid="uid://dvr7t4qjqkk63"]

[ext_resource type="Script" path="res://Art/Popperfish/popperfish.gd" id="1_16s2f"]
[ext_resource type="Texture2D" uid="uid://enbxj76lkhjr" path="res://Art/Popperfish/peak.png" id="1_gp1vv"]
[ext_resource type="Texture2D" uid="uid://btjk54v1igo8v" path="res://Art/Popperfish/explode.png" id="3_xkehw"]

[sub_resource type="Animation" id="Animation_cebtf"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Minotaur:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_6egce"]
resource_name = "Normal"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ftcw"]
_data = {
"Hurt": SubResource("Animation_cebtf"),
"Normal": SubResource("Animation_6egce")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_44h75"]
radius = 43.4632

[sub_resource type="CircleShape2D" id="CircleShape2D_vg3ho"]
radius = 138.142

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(2.6, 2.6)
collision_layer = 2
collision_mask = 19
motion_mode = 1
script = ExtResource("1_16s2f")

[node name="Popperfish" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
position = Vector2(1.90735e-06, -2.86102e-06)
scale = Vector2(1.3524, 1.3524)
texture = ExtResource("1_gp1vv")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ftcw")
}

[node name="SpiderBody" type="CollisionShape2D" parent="."]
position = Vector2(1.92593e-34, -2.38419e-07)
shape = SubResource("CircleShape2D_44h75")

[node name="Kaboom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kaboom"]
shape = SubResource("CircleShape2D_vg3ho")

[node name="Explosion" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
position = Vector2(1.92593e-34, -2.38419e-07)
scale = Vector2(2.06154, 2.06154)
texture = ExtResource("3_xkehw")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 4.0

[connection signal="body_entered" from="Kaboom" to="." method="_on_kaboom_body_entered"]
[connection signal="body_entered" from="Kaboom" to="." method="_on_hide_away_body_entered"]
[connection signal="body_exited" from="Kaboom" to="." method="_on_kaboom_body_exited"]
[connection signal="body_exited" from="Kaboom" to="." method="_on_hide_away_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
